{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 768,
  "lineage": "6e2af035-73ac-4521-8b44-79be84e37869",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:244680720635:instance/i-045d3e91ec99d5455",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "proyecto2-dev-ec2-profile-2",
            "id": "i-045d3e91ec99d5455",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2d803763c6780db",
            "private_dns": "ip-10-0-10-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.108",
            "public_dns": "ec2-34-236-149-1.compute-1.amazonaws.com",
            "public_ip": "34.236.149.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0297cc9c012c75609",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a3648aff8a073ef",
            "tags": {
              "Name": "proyecto2-dev-backend-0"
            },
            "tags_all": {
              "Name": "proyecto2-dev-backend-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb8573ca24615de2"
            ]
          },
          "dependencies": [
            "aws_db_instance.sqlserver",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:244680720635:instance/i-020af07651412bb0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "proyecto2-dev-ec2-profile-2",
            "id": "i-020af07651412bb0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2ee636e216b2a84",
            "private_dns": "ip-10-0-20-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.12",
            "public_dns": "ec2-34-239-42-90.compute-1.amazonaws.com",
            "public_ip": "34.239.42.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a24f587b96d30f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039287f2d53958c79",
            "tags": {
              "Name": "proyecto2-dev-backend-1"
            },
            "tags_all": {
              "Name": "proyecto2-dev-backend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb8573ca24615de2"
            ]
          },
          "dependencies": [
            "aws_db_instance.sqlserver",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:244680720635:instance/i-0dce019b930793816",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "proyecto2-dev-ec2-profile-2",
            "id": "i-0dce019b930793816",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f0063169ce01e92",
            "private_dns": "ip-10-0-10-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.129",
            "public_dns": "ec2-54-235-3-34.compute-1.amazonaws.com",
            "public_ip": "54.235.3.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-096cda463bb6eb2e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a3648aff8a073ef",
            "tags": {
              "Name": "proyecto2-dev-frontend"
            },
            "tags_all": {
              "Name": "proyecto2-dev-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb8573ca24615de2"
            ]
          },
          "dependencies": [
            "aws_db_instance.sqlserver",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:internet-gateway/igw-0616eb9dca7a2b362",
            "id": "igw-0616eb9dca7a2b362",
            "owner_id": "244680720635",
            "tags": {
              "Name": "proyecto2-dev-igw"
            },
            "tags_all": {
              "Name": "proyecto2-dev-igw"
            },
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:loadbalancer/app/proyecto2-dev-alb/1728ea317173b079",
            "arn_suffix": "app/proyecto2-dev-alb/1728ea317173b079",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "proyecto2-dev-alb-1000326495.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:244680720635:loadbalancer/app/proyecto2-dev-alb/1728ea317173b079",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proyecto2-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cb8573ca24615de2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039287f2d53958c79"
              },
              {
                "subnet_id": "subnet-08a3648aff8a073ef"
              }
            ],
            "subnets": [
              "subnet-039287f2d53958c79",
              "subnet-08a3648aff8a073ef"
            ],
            "vpc_id": "vpc-0a5f9402e8b4a2a57",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:listener/app/proyecto2-dev-alb/1728ea317173b079/b94f1b00067fd54e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:244680720635:listener/app/proyecto2-dev-alb/1728ea317173b079/b94f1b00067fd54e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:loadbalancer/app/proyecto2-dev-alb/1728ea317173b079",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api_lb",
            "aws_lb_target_group.api_target_group",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df",
            "arn_suffix": "targetgroup/proyecto2-dev-tg/fcd277f765a991df",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:244680720635:loadbalancer/app/proyecto2-dev-alb/1728ea317173b079"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proyecto2-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df-20250517040158342300000004",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df",
            "target_id": "i-045d3e91ec99d5455"
          },
          "dependencies": [
            "aws_db_instance.sqlserver",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.backend_servers",
            "aws_lb_target_group.api_target_group",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df-20250517040158382900000005",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:244680720635:targetgroup/proyecto2-dev-tg/fcd277f765a991df",
            "target_id": "i-020af07651412bb0b"
          },
          "dependencies": [
            "aws_db_instance.sqlserver",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.backend_servers",
            "aws_lb_target_group.api_target_group",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:route-table/rtb-098cd0943d5ab915c",
            "id": "rtb-098cd0943d5ab915c",
            "owner_id": "244680720635",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0616eb9dca7a2b362",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proyecto2-dev-public-rt"
            },
            "tags_all": {
              "Name": "proyecto2-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084aca57144b62763",
            "route_table_id": "rtb-098cd0943d5ab915c",
            "subnet_id": "subnet-08a3648aff8a073ef"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39e819cbd224519",
            "route_table_id": "rtb-098cd0943d5ab915c",
            "subnet_id": "subnet-039287f2d53958c79"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:security-group/sg-0cb8573ca24615de2",
            "description": "Allow inbound traffic to EC2 and RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb8573ca24615de2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic to Streamlit port",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic to microservice port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Allow SQL Server access between EC2s and RDS",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 1433
              }
            ],
            "name": "proyecto2-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "244680720635",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proyecto2-dev-ec2-sg"
            },
            "tags_all": {
              "Name": "proyecto2-dev-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:subnet/subnet-08a3648aff8a073ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a3648aff8a073ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244680720635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proyecto2-dev-public-a"
            },
            "tags_all": {
              "Name": "proyecto2-dev-public-a"
            },
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:subnet/subnet-039287f2d53958c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039287f2d53958c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "244680720635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proyecto2-dev-public-b"
            },
            "tags_all": {
              "Name": "proyecto2-dev-public-b"
            },
            "vpc_id": "vpc-0a5f9402e8b4a2a57"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244680720635:vpc/vpc-0a5f9402e8b4a2a57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3b3517c0df3eda3",
            "default_route_table_id": "rtb-0f0d62a434ca5441b",
            "default_security_group_id": "sg-0578016c1b71f149c",
            "dhcp_options_id": "dopt-00062886c4a15e279",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5f9402e8b4a2a57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0d62a434ca5441b",
            "owner_id": "244680720635",
            "tags": {
              "Name": "proyecto2-dev-vpc"
            },
            "tags_all": {
              "Name": "proyecto2-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}